tests/spec/fail/time_after_negative.aja
import (
    "time"
)

time.after(-1)
